# tractor

./: .gitignore  CLAUDE.md  README.md  actor.py  flake.nix  main.py  pyproject.toml
.claude/: settings.json
examples/: handler_greetings.py  pub_sub.py
src/tractor/: __init__.py  actor.py  combinators.py  control_flow.py  decorators.py  errors.py  future.py  handles.py  inbox.py  message.py  oneshot.py  protocols.py  ref.py  request.py  runtime.py  select.py
src/tractor/actors/: __init__.py  pool.py
tests/: test_api.py  test_base_actors.py  test_handler.py  test_inbox.py  test_main.py  test_oneshot.py  test_runtime.py  test_select.py  test_type_safety.py  test_worker_pool.py
