[project]
name = "tractor"
version = "0.1.0"
description = "A simple, modern, type-safe actor framework for asynchronous, fault-tolerant systems."
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "basedpyright>=1.38.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.1",
]

[tool.basedpyright]
typeCheckingMode = "recommended"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"
