[project]
name = "tractor"
version = "0.1.0"
description = "A simple, modern, type-safe actor framework for asynchronous, fault-tolerant systems."
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "pyrefly>=1.0.0",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.17",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pyrefly]
project-includes = ["src", "tests"]
preset = "strict"
strict-callable-subtyping = true
enabled-ignores = ["type", "pyrefly", "pyright"]

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"
