[project]
name = "tractor"
version = "0.1.0"
description = "A simple, modern, type-safe actor framework for asynchronous, fault-tolerant systems."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Shane Murphy", email = "mail@semurphy.com" }]
keywords = [
    "actor",
    "actor-model",
    "concurrency",
    "asyncio",
    "async",
    "distributed",
    "fault-tolerant",
    "type-safe",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Framework :: AsyncIO",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ShaneEverittM/tractor"
Repository = "https://github.com/ShaneEverittM/tractor"
Issues = "https://github.com/ShaneEverittM/tractor/issues"

[dependency-groups]
dev = [
    "pyrefly>=1.0.0",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.17",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pyrefly]
project-includes = ["src", "tests"]
preset = "strict"
strict-callable-subtyping = true
enabled-ignores = ["type", "pyrefly", "pyright"]

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"
